# PDHCG

./: .gitignore  CMakeLists.txt  Manifest.toml  Manifest.toml.bak  Project.toml  README.md  cli.jl  create_sysimage.jl  demo.jl  example.py  example.tex  fisher_kernel_test.jl  fisher_kernel_wrapper.jl  generate.jl  ipopt_compare.jl  lbfgs_fisher.jl  lbfgsb.jl  lbfgsb_cuda.jl  lcp.jl  pdhg_lbfgsb.jl  pdlp.py  pdnlp_logistic.jl  precompile copy.jl  precompile.jl  setup.py  tempCodeRunnerFile.jl  try_block.jl  try_ctypes.py
pdhcg_env/: Manifest.toml  Project.toml
src/: PDHCG.jl  cuda_kernel.jl  data.jl  optimizer.jl  preprocess.jl  preprocess_gpu.jl  problem_gen.jl  saddle_point.jl  saddle_point_gpu.jl  solve_log.jl  solver.jl  solver_core.jl  solver_gpu.jl  solver_gpu_core.jl  termination.jl
src/kernel/: fisher_func.h  osgm_band.cu  osgm_band_update.cu
src/kernel/compiled_kernel/: fisher_kernel.ptx  osgm_band.ptx  osgm_band_update.ptx
